- Sarray: Copy-constructor for Sarray and Sarray-subclasses - MulibTransformer:   - Symbolic initialization methods for Sarrays   - Some fixes and specific treatment for Sarrays and descriptors of primitive arrays   - Especially: Treatment of substituting MultiANewArray - StringConstants: Strings for Sarray-related methods - TaintAnalysis: Added selectedTypeFromSarray-map to add differentiate expected types loaded via AALOAD. For AALOAD, the JVM does not need this info. Since we replace AALOAD with a method-call, it is needed. - TaintAnalyzer: A lot of rewriting/enhancing. Treatment of Sarray-instructions - FreeArraysTransfExec: New tests to validate use of SystemClassLoader-config